add tags to recipes
